# django_shop

./: .dockerignore  Dockerfile  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  requirements.txt
django_shop/: db.json  db.sqlite3
django_shop/account/: forms.py  models.py  services.py  urls.py  views.py
django_shop/account/migrations/: 0001_initial.py
django_shop/account/static/css/: auth.css  profile.css  signup.css
django_shop/account/templates/: login.html  profile.html  signup.html
django_shop/article/: admin.py  models.py  services.py  urls.py  views.py
django_shop/article/migrations/: 0001_initial.py
django_shop/article/static/css/: index.css
django_shop/article/templates/: index.html
django_shop/cart/: admin.py  cart.py  models.py  services.py  signals.py  urls.py  views.py
django_shop/cart/migrations/: 0001_initial.py
django_shop/cart/static/js/: view_cart.js
django_shop/cart/templates/: add_to_cart.html  cart-menu.html  view_cart.html  view_orders.html
django_shop/django_shop/: settings.py  urls.py
django_shop/shop/: admin.py  context_processors.py  forms.py  models.py  services.py  urls.py  views.py
django_shop/shop/migrations/: 0001_initial.py  0002_product_price.py  0003_alter_product_price.py
django_shop/shop/templates/: category_list.html  product_detail.html  product_list.html
django_shop/shop/templatetags/: ratingtags.py
django_shop/static/css/: base.css  footer.css  menu.css
django_shop/static/js/: view_catalog.js
django_shop/templates/: base.html  catalog_menu.html  footer.html  menu.html  messages.html
(+6 files in other folders)
